# fibofun

./: .coverage  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml
fibspiral/: __init__.py  __main__.py  cli.py  core.py  export.py
fibspiral.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_core.py
web/: data.json  fibonacci-facts.json  index.html  spiral.js  style.css
