[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fibspiral"
version = "0.1.0"
description = "Fibonacci spiral — CLI and golden-spiral geometry library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8", "pytest-cov>=5"]

[project.scripts]
fibspiral = "fibspiral.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fibspiral*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["fibspiral"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
